chore: update configuration files
- Add LOCAL_TESTING_CHECKLIST.md to .gitignore
- Update Claude settings configuration

--- a/.gitignore
+++ b/.gitignore
@@ -104,5 +104,8 @@ assets/**/workspaceStorage_*/*
 # Internal planning documents
 .internal/
 
+# Local testing documents
+LOCAL_TESTING_CHECKLIST.md
+
 # Legacy documentation (archived reports and session logs)
 docs/.legacy/
