--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.2",
     "@reduxjs/toolkit": "^2.11.2",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
