--- a/package.json
+++ b/package.json
@@ -106,6 +106,8 @@
     "fast-xml-parser": "^5.3.3",
     "fastest-levenshtein": "^1.0.16",
     "framer-motion": "^12.24.12",
+    "@langchain/core": "^1.1.15",
+    "langchain": "^1.2.10",
     "lucide-react": "^0.562.0",
     "lunr": "^2.3.9",
     "mammoth": "^1.11.0",
