feat(docs): enhance documentation and changelog with new badges and structure
- Added badges to CHANGELOG.md and CONTRIBUTING.md for better visibility.
- Updated README.md with a new layout, including a logo and improved feature descriptions.
- Enhanced GETTING_STARTED.md with a table of contents and setup time indicators.
- Improved SECURITY.md to highlight security priorities and local-only processing.
- Refined documentation structure for clarity and ease of navigation.

These changes aim to improve user experience and accessibility of project information.

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "start": "npm run build:dev && cross-env NODE_ENV=development electron . --enable-logging",
     "start:prod": "cross-env NODE_ENV=production electron .",
     "start:debug": "cross-env NODE_ENV=development electron . --enable-logging --inspect",
-    "test": "jest --config test/jest.config.js",
+    "test": "jest --config test/jest.config.js --detectOpenHandles",
     "test:coverage": "jest --config test/jest.config.js --coverage",
     "test:watch": "jest --config test/jest.config.js --watch",
     "test:perf": "jest --config test/performance/jest.config.js --runInBand",
