refactor: update shared utilities and configuration
- Update shared constants and schemas
- Enhance utility functions (normalization, paths, platform)
- Update package configuration and environment examples
- Improve preload scripts and sanitization

--- a/.env.example
+++ b/.env.example
@@ -101,6 +101,15 @@ OLLAMA_MULTIMODAL_MODEL=gemma3:latest
 # Disable ChromaDB entirely (useful for minimal deployments)
 # STRATOSORT_DISABLE_CHROMADB=1
 
+# Graph feature flags (set to 0/1)
+# STRATOSORT_GRAPH_ENABLED=1
+# STRATOSORT_GRAPH_CLUSTERS=1
+# STRATOSORT_GRAPH_SIMILARITY_EDGES=1
+# STRATOSORT_GRAPH_MULTI_HOP=1
+# STRATOSORT_GRAPH_PROGRESSIVE_LAYOUT=1
+# STRATOSORT_GRAPH_KEYBOARD_NAV=1
+# STRATOSORT_GRAPH_CONTEXT_MENUS=1
+
 # Enable debug mode with verbose logging
 # STRATOSORT_DEBUG=1
 
