--- a/.env.development.local.example
+++ b/.env.development.local.example
@@ -16,6 +16,15 @@ OLLAMA_MULTIMODAL_MODEL=gemma3:latest
 # ChromaDB configuration (optional, defaults to local)
 # CHROMA_SERVER_PORT=8000
 
+# Graph feature flags (set to 0/1)
+# STRATOSORT_GRAPH_ENABLED=1
+# STRATOSORT_GRAPH_CLUSTERS=1
+# STRATOSORT_GRAPH_SIMILARITY_EDGES=1
+# STRATOSORT_GRAPH_MULTI_HOP=1
+# STRATOSORT_GRAPH_PROGRESSIVE_LAYOUT=1
+# STRATOSORT_GRAPH_KEYBOARD_NAV=1
+# STRATOSORT_GRAPH_CONTEXT_MENUS=1
+
 # Debug logging (uncomment to enable verbose logging)
 # DEBUG=stratosort:*
 
