--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     },
     "@jridgewell/gen-mapping": "^0.3.5",
     "js-yaml": "^4.1.1",
-    "tar": ">=7.5.3"
+    "tar": "^7.5.7"
   },
   "jest": {
     "projects": [
