--- a/package.json
+++ b/package.json
@@ -83,10 +83,11 @@
     "test:e2e:debug": "npx playwright test --debug",
     "test:e2e:ui": "npx playwright test --ui",
     "test:e2e:report": "npx playwright show-report test-results/e2e-report",
+    "test:soak": "cross-env SOAK=1 SOAK_MINUTES=12 npx playwright test test/e2e/soak.spec.js --timeout=1200000",
     "ollama:check": "node scripts/setup-ollama.js --check",
     "ollama:models": "ollama pull gemma3:4b",
     "dist": "npm run build && electron-builder --publish never --config electron-builder.json",
-    "dist:win": "npm run build && electron-builder --win --publish never --config electron-builder.json",
+    "dist:win": "npm run setup:runtime && npm run build && electron-builder --win --publish never --config electron-builder.json",
     "dist:mac": "npm run build && electron-builder --mac --publish never --config electron-builder.json",
     "dist:linux": "npm run build && electron-builder --linux --publish never --config electron-builder.json",
     "dist:all": "npm run build && electron-builder --mac --win --linux --publish never --config electron-builder.json",
