chore: update macOS release workflow and add manual distribution workflow
- Removed manual trigger option from the macOS release workflow.
- Introduced a new manual distribution workflow for building and publishing Windows and macOS distributions with customizable inputs.
- Deleted the old Windows distribution workflow to streamline the process.

--- a/.github/workflows/mac-release.yml
+++ b/.github/workflows/mac-release.yml
@@ -1,4 +1,4 @@
-# Mac release workflow — run on tag push or manually.
+# Mac release workflow — run on tag push.
 # Builds on macos-latest (Apple Silicon). For Intel DMG, add a matrix or separate job.
 name: Release (macOS)
 
@@ -6,7 +6,6 @@ on:
   push:
     tags:
       - 'v*.*.*'
-  workflow_dispatch:
 
 permissions:
   contents: write
