--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Generate SHA256 checksums
         run: |
           $files = Get-ChildItem release/build -File -ErrorAction SilentlyContinue |
-            Where-Object { $_.Name -match 'StratoSort-.*|latest\.yml|\.blockmap' }
+            Where-Object { $_.Name -match '^StratoSortCore-.*\.(exe|blockmap)$|^latest\.yml$' }
           if (-not $files -or $files.Count -eq 0) {
             throw "No build artifacts found to checksum."
           }
@@ -39,7 +39,7 @@ jobs:
             $hash = (Get-FileHash $_.FullName -Algorithm SHA256).Hash
             "$hash *$($_.Name)"
           }
-          $hashes | Out-File release/build/checksums.sha256 -Encoding ASCII
+          $hashes | Out-File release/build/checksums-windows.sha256 -Encoding ASCII
 
       - name: Build release notes from CHANGELOG
         run: |
@@ -85,8 +85,8 @@ jobs:
           body_path: release/build/release-notes.md
           fail_on_unmatched_files: true
           files: |
-            release/build/StratoSort-Setup-*.exe
-            release/build/StratoSort-*-win-*.exe
+            release/build/StratoSortCore-Setup-*.exe
+            release/build/StratoSortCore-*-win-*.exe
             release/build/*.blockmap
             release/build/latest.yml
-            release/build/checksums.sha256
+            release/build/checksums-windows.sha256
