fix: show StratoSort Core in macOS dock and Activity Monitor
Fixes #11

macOS shows Electron in the dock and Activity Monitor because it reads
the app name from the Electron binary Info.plist during development.

- Add productName to package.json so Electron resolves app.name correctly
- Set app.name explicitly before any windows/menus are created
- Set dock icon programmatically via app.dock.setIcon on macOS
- Add postinstall script that patches Electron.app Info.plist on macOS
  to replace CFBundleName/CFBundleDisplayName with StratoSort Core

Production builds were already correct (electron-builder.json has the
right productName); this fix targets the development experience.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "stratosort-core",
+  "productName": "StratoSort Core",
   "version": "2.0.1",
   "description": "StratoSort Core - Local AI Document Organizer. Privacy-focused document organization using in-process AI (node-llama-cpp + Orama). Zero external dependencies.",
   "keywords": [
