Consolidate remaining platform hardening, service updates, and search UI additions.
Capture the pending backend reliability refinements, renderer/search feature components, and related tests/docs so the working tree is fully synchronized.

--- a/package.json
+++ b/package.json
@@ -136,6 +136,8 @@
     "piscina": "^5.1.4",
     "prop-types": "^15.8.1",
     "react": "^19.2.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.4",
     "react-redux": "^9.2.0",
     "react-window": "^2.2.6",
