Enhance CI processes, coverage checks, and IPC validation.
- Update CI workflow to enforce test coverage checks across all platforms (Windows, macOS, Linux).
- Implement static verification for IPC handlers to ensure all channels have registered handlers.
- Add Zod schemas for input validation in IPC handlers.
- Introduce transaction journaling for atomic file operations, improving data integrity during operations.
- Update documentation to reflect new testing and coverage standards.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,33 @@ on:
     branches: [main, master, develop]
 
 jobs:
-  build-and-test:
-    runs-on: windows-latest
+  lint-and-format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v6
+        with:
+          node-version: 20.x
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Check formatting
+        run: npm run format:check
+
+      - name: Lint
+        run: npm run lint
+
+  test:
+    needs: lint-and-format
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v6
@@ -22,5 +47,52 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Run CI
-        run: npm run ci
+      - name: Run tests with coverage
+        run: npm run test:coverage
+
+      - name: Upload coverage report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.os }}
+          path: coverage/
+          retention-days: 14
+
+  build:
+    needs: test
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v6
+        with:
+          node-version: 20.x
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+  ipc-contract-check:
+    needs: lint-and-format
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v6
+        with:
+          node-version: 20.x
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Verify IPC channel sync
+        run: npm run generate:channels:check
+
+      - name: Verify IPC handler coverage
+        run: npm run verify:ipc-handlers
