--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,3 +96,24 @@ jobs:
 
       - name: Verify IPC handler coverage
         run: npm run verify:ipc-handlers
+
+  e2e:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v6
+        with:
+          node-version: 20.x
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build renderer for E2E
+        run: npm run build:dev
+
+      - name: Run E2E tests
+        run: npm run test:e2e
