fix(docs): align release and configuration documentation
Group documentation and workflow guide updates so release/config instructions stay in sync with recent backend and packaging behavior.

--- a/.env.development.local.example
+++ b/.env.development.local.example
@@ -6,8 +6,12 @@ FORCE_DEV_TOOLS=true
 
 # Development models (GGUF filenames - smaller/faster for testing)
 STRATOSORT_TEXT_MODEL=Llama-3.2-3B-Instruct-Q4_K_M.gguf
-STRATOSORT_VISION_MODEL=llava-phi-3-mini-int4.gguf
+STRATOSORT_VISION_MODEL=llava-v1.6-mistral-7b-Q4_K_M.gguf
 STRATOSORT_EMBEDDING_MODEL=nomic-embed-text-v1.5-Q4_K_M.gguf
+
+# Vision runtime stability defaults (safe on ~6GB VRAM GPUs)
+STRATOSORT_VISION_BATCH_SIZE=512
+STRATOSORT_VISION_UBATCH_SIZE=128
 
 # Graph feature flags (set to 0/1)
 # STRATOSORT_GRAPH_ENABLED=1
