--- a/package.json
+++ b/package.json
@@ -91,9 +91,11 @@
     "dist": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --publish never --config electron-builder.json",
     "dist:win": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --win --publish never --config electron-builder.json",
     "dist:mac": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --mac --publish never --config electron-builder.json",
+    "dist:mac:x64": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --mac --x64 --publish never --config electron-builder.json",
+    "dist:mac:arm64": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --mac --arm64 --publish never --config electron-builder.json",
     "dist:linux": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --linux --publish never --config electron-builder.json",
     "dist:all": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --mac --win --linux --publish never --config electron-builder.json",
-    "ci": "npm run format:check && npm run lint && npm run test:coverage && npm run build",
+    "ci": "npm run format:check && npm run lint && npm run test:coverage && npm run verify:ipc-handlers && npm run build",
     "verify:ipc-handlers": "node scripts/verify-ipc-handlers.js",
     "upgrade": "npx npm-check-updates -u && npm install"
   },
