--- a/package.json
+++ b/package.json
@@ -97,6 +97,11 @@
     "dist:all": "npm run build && npm run setup:vision-runtime && npm run setup:vision-runtime:check && electron-builder --mac --win --linux --publish never --config electron-builder.json",
     "ci": "npm run format:check && npm run lint && npm run test:coverage && npm run verify:ipc-handlers && npm run build",
     "verify:ipc-handlers": "node scripts/verify-ipc-handlers.js",
+    "verify:native-modules": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/verify-native-modules.js",
+    "verify:packaged-artifacts": "node scripts/verify-packaged-artifacts.js",
+    "verify:updater-metadata": "node scripts/verify-updater-metadata.js",
+    "preflight:release": "node scripts/release-preflight.js",
+    "preflight:release:quick": "node scripts/release-preflight.js --skip-dist",
     "upgrade": "npx npm-check-updates -u && npm install"
   },
   "browserslist": [],
