--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, master, develop]
+    branches: [main, master, develop, RegressionFixes]
   pull_request:
-    branches: [main, master, develop]
+    branches: [main, master, develop, RegressionFixes]
 
 jobs:
   lint-and-format:
@@ -116,4 +116,4 @@ jobs:
         run: npm run build:dev
 
       - name: Run E2E tests
-        run: npm run test:e2e
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x1024x24" npm run test:e2e
