feat(knowledge-os): harden indexing, diagnostics, and release readiness
Improve Knowledge OS reliability by surfacing index health diagnostics in the UI, normalizing metadata/path fallbacks, and filtering stale cluster or bridge entries so search and graph results stay trustworthy. Align release and workflow checks with the preflight flow while extending coverage around clustering, IPC, and renderer behavior to reduce regression risk.

--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -39,8 +39,7 @@ jobs:
       - name: Merge patch and minor updates
         if: |
           steps.metadata.outputs.update-type == 'version-update:semver-patch' ||
-          steps.metadata.outputs.update-type == 'version-update:semver-minor' ||
-          steps.metadata.outputs.dependency-type == 'direct:development'
+          steps.metadata.outputs.update-type == 'version-update:semver-minor'
         uses: actions/github-script@v8
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
